--- a/src/styles.css
+++ b/src/styles.css
@@ -29,3 +29,22 @@
 .subheader{
 	font-size: 22px;
 }
+
+.nospaces{
+	margin: 0px !important;
+	padding: 0px !important;
+}
+
+.withpadding{
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.withmargin{
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
